--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@ var os = require('os');
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#">About</a>
-  <a href="#">Services</a>
+  <a href="qc.html">Quality control</a>
+  <a href="clean.html">Cleaning</a>
   <a href="analysis.html">Analysis</a>
+  <a href="control.html">Control</a>
   <a href="#">Contact</a>
 </div>
 
