--- a/analysis.html
+++ b/analysis.html
@@ -57,7 +57,7 @@
       <label for="cores">Number of threads</label>
       <input type="text" id="cores" name="cores" placeholder="1">
 	  <br><br>
-	  <input type="submit" value="Run" onclick="run_analysis()">
+	  <input type="submit" value="Run" onclick="run_analysis('fileDialog')">
 	  <textarea id="outputtext"></textarea>
 	</div>
   </div>
