--- a/clean.html
+++ b/clean.html
@@ -77,7 +77,7 @@
 	  <textarea id="outputtext"></textarea>
 	  <br>
 	  <label id="resultLbl">Results:</label><br>
-	  <a id="alink"></a>
+	  <a target="_blank" id="alink"></a>
 	  <div id="graph"></div>
 	  <input id="save" type="submit" value="Save graph" onclick="save()">
 	  <input id="analysis" type="submit" value="Analysis" onclick="link_analysis()">
