--- a/analysis.html
+++ b/analysis.html
@@ -7,42 +7,45 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
  	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="js/functions.js"></script>
+  <script type="text/javascript" src="js/adds.js"></script>
   <script type="text/javascript" src="js/menu.js"></script>
 
 </head>
     <script>
 
     $( document ).ready(function() {
-    // document.getElementById("outputtext").style.display = "none";
+      $("#Menu").load("menu.html"); 
       read_db();
       read_reference();
       document.getElementById("outputtext").style.display = "none";
+
+    var url = require('url');
+    var url_parts = url.parse(location.href, true);
+    const query = url_parts.query;
+    var fs = require('fs');
+
+    if (fs.existsSync(query.folder)) {
+      const path = require('path');
+      document.getElementById("fileDialog").style.display = "none";
+      document.getElementById("path1").innerHTML = "Working in the directory: " + path.basename(query.folder);
+      document.getElementById("ruta").value = query.folder;
+    }
+
   });
 
 
   </script>
 
 <body> 
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#">About</a>
-    <a href="reference.html">Host reference</a>
-    <a href="ncbi.html">NCBI update</a>
-    <a href="localdb.html">Local DB update</a>
-    <a href="qc.html">FastQC</a>
-    <a href="clean.html">Trimming</a>
-    <a href="spike.html">Spike</a>
-    <a href="control.html">Mejora QC</a>
-    <a href="analysis.html">Analysis</a>
-    <a href="#">Contact</a>
-  </div>
+  <div id="Menu"></div>
 
   <span onclick="openNav()">Menu</span>  
 
   <label>Run Virus Detect</label>
   <div id="main">
     <div class="container" id="container">
-	  <label>Select uploaded samples folder</label><br><br>
+      <label id="ruta"></label>
+	     <label id="path1">Select uploaded samples folder</label><br><br>
     <input id="fileDialog" type="file" nwdirectory nwworkingdir="./"  /><br><br>
 
 	  <label>Select virus sequence database</label><br>
@@ -57,7 +60,7 @@
       <label for="cores">Number of threads</label>
       <input type="text" id="cores" name="cores" placeholder="1">
 	  <br><br>
-	  <input type="submit" value="Run" onclick="run_analysis('fileDialog')">
+	  <input type="submit" value="Run" onclick="analysis()">
 	  <textarea id="outputtext"></textarea>
 	</div>
   </div>
