--- a/clean.html
+++ b/clean.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title>sRNA data cleaning</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
+      <script src="https://d3js.org/d3.v5.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="text/javascript" src="js/menu.js"></script>
+   	<script type="text/javascript" src="js/functions.js"></script>
+   	<script type="text/javascript" src="js/adds.js"></script>
+  <div id="header"></div>
   <style type="text/css">
 		/* 13. Basic Styling with CSS */
 
@@ -33,38 +37,39 @@
   </style>
 </head>
 <body>
-  <script type="text/javascript" src="js/menu.js"></script>
-  <script type="text/javascript" src="js/functions.js"></script>
   <script>
   	$( document ).ready(function() {
+
+        $("#Menu").load("menu.html");  
 		document.getElementById("outputtext").style.display = "none";
 		document.getElementById("resultLbl").style.display = "none";
-		document.getElementById("analysis").style.display = "none";
 		document.getElementById("save").style.display = "none";
+
+		var url = require('url');
+		var url_parts = url.parse(location.href, true);
+		const query = url_parts.query;
+		var fs = require('fs');
+
+		if (fs.existsSync(query.folder)) {
+			const path = require('path');
+			document.getElementById("fileDialog").style.display = "none";
+			document.getElementById("path1").innerHTML = "Working in the directory: " + path.basename(query.folder);
+			document.getElementById("ruta").value = query.folder;
+		}
+
+
 	});
   </script>
 
-  <div id="mySidenav" class="sidenav">
-	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	  <a href="#">About</a>
-	  <a href="reference.html">Host reference</a>
-	  <a href="ncbi.html">NCBI update</a>
-	  <a href="localdb.html">Local DB update</a>
-	  <a href="qc.html">Upload</a>
-	  <a href="clean.html">Trimming</a>
-	  <a href="spike.html">Spike</a>
-	  <a href="control.html">Mejora QC</a>
-	  <a href="analysis.html">Analysis</a>
-	  <a href="#">Contact</a>
-	</div>
+  <div id="Menu"></div>
 
-
-<!-- Use any element to open the sidenav -->
-<span onclick="openNav()">Menu</span>
+  <!-- Use any element to open the sidenav -->
+  <span onclick="openNav()">Menu</span>
 
   <div id="main">
     <div class="container" id="container">
-      <label>Select uploaded samples folder</label><br><br>
+      <label id="ruta"></label>
+      <label id="path1">Select uploaded samples folder</label><br><br>
 	  <input id="fileDialog" type="file" nwdirectory nwworkingdir="./"  /><br><br>
 
 	  <label>Sequences of the adaptor</label><br>
@@ -73,15 +78,16 @@
 	  <label>Minimum length of sRNAs after trimming</label><br>
 	  <input type="text" id="length" name="length" placeholder="">
 	  <br><br>
-	  <input id="submit" type="submit" value="Trim" onclick="trimming('fileDialog')">
+	  <input id="submit" type="submit" value="Trim" onclick="trim()">
 	  <textarea id="outputtext"></textarea>
 	  <br>
 	  <label id="resultLbl">Results:</label><br>
 	  <a target="_blank" id="alink"></a>
 	  <div id="graph"></div>
 	  <input id="save" type="submit" value="Save graph" onclick="save()">
-	  <input id="analysis" type="submit" value="Analysis" onclick="link_analysis()">
-	</div>
+	  <input id="spike" type="submit" value="Next" onclick="link_spike('ruta')"> 
+<!-- 	  <input id="analysis" type="submit" value="Analysis" onclick="link_analysis()">
+ -->	</div>
   </div>
 </body>
 </html>
