--- a/menu.html
+++ b/menu.html
@@ -4,9 +4,10 @@
   <ul><a href="reference.html">Host reference</a>
   <a href="ncbi.html">NCBI update</a>
   <a href="localdb.html">Local DB update</a></ul>
-  <a href="qc.html">1. Upload</a>
+<!--   <a href="qc.html">1. Upload</a>
   <a href="clean.html">2. Trimming</a>
   <a href="spike.html">3. Spike</a>
-  <a href="analysis.html">4. Analysis</a>
+  <a href="analysis.html">4. Analysis</a> -->
+  <a href="vd_analysis.html">Analysis</a>
   <a href="#">Contact</a>
 </div>
