--- a/vd_analysis.html
+++ b/vd_analysis.html
@@ -34,7 +34,7 @@
         <label id="ruta"></label>
         <input type="text" id="pname" name="projectname" placeholder=""><br>
         <div id=remove>
-            <label id="upload" for="upload">Select fastq/fq file(s)<br><br></label>
+            <label id="upload" for="upload">Select file(s) to upload (fastq,fq,gz) <br><br></label>
             <input id="fileDialog" type="file" multiple accept=".fastq, .fq, .tar.gz, .gz" nwworkingdir="C:\"  ><br><br></input>
         </div>
         <div>
