db working and graph almost ready

--- a/menu.html
+++ b/menu.html
@@ -9,5 +9,5 @@
   <a href="spike.html">3. Spike</a>
   <a href="analysis.html">4. Analysis</a> -->
   <a href="vd_analysis.html">Analysis</a>
-  <a href="#">Contact</a>
+  <a href="results.html">Contact</a>
 </div>
