--- a/analysis.html
+++ b/analysis.html
@@ -9,7 +9,17 @@
 	<script type="text/javascript" src="js/functions.js"></script>
   <script type="text/javascript" src="js/adds.js"></script>
   <script type="text/javascript" src="js/menu.js"></script>
-
+<div id="ballsWaveG" class="overlay">
+   <div id="ballsWaveG_1" class="ballsWaveG"></div>
+   <div id="ballsWaveG_2" class="ballsWaveG"></div>
+   <div id="ballsWaveG_3" class="ballsWaveG"></div>
+   <div id="ballsWaveG_4" class="ballsWaveG"></div>
+   <div id="ballsWaveG_5" class="ballsWaveG"></div>
+   <div id="ballsWaveG_6" class="ballsWaveG"></div>
+   <div id="ballsWaveG_7" class="ballsWaveG"></div>
+   <div id="ballsWaveG_8" class="ballsWaveG"></div>
+ </div>
+ 
 </head>
     <script>
 
