--- a/vd_analysis.html
+++ b/vd_analysis.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/integrate.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/adds.js"></script>
+    <script type="text/javascript" src="js/graph.js"></script>
     <div id="ballsWaveG" class="overlay">
        <div id="ballsWaveG_1" class="ballsWaveG"></div>
        <div id="ballsWaveG_2" class="ballsWaveG"></div>
@@ -20,6 +21,47 @@
        <div id="ballsWaveG_7" class="ballsWaveG"></div>
        <div id="ballsWaveG_8" class="ballsWaveG"></div>
      </div>
+    <style type="text/css">
+      body, html {
+        height: 100%;
+      }
+      /* 13. Basic Styling with CSS */
+
+      /* Style the lines by removing the fill and applying a stroke */
+      .line {
+          fill: none;
+          stroke: #ffab90;
+          stroke-width: 3;
+      }
+        
+      .overlay {
+        fill: none;
+        pointer-events: all;
+      }
+
+      /* Style the dots by assigning a fill and stroke */
+      .dot {
+          fill: #ffab00;
+          stroke: #fff;
+      }
+        
+        .focus circle {
+        fill: none;
+        stroke: steelblue;
+      }
+
+        .bar {
+        fill: steelblue;
+      }
+
+      .bar:hover {
+        fill: brown;
+      }
+
+      .axis--x path {
+        display: none;
+      }
+    </style>
 </head>
 <body>
 
@@ -76,6 +118,7 @@
     </div>
 
   </div>
-
+    <div id="graph"></div>
+    <div id="graph1"></div>
 </body>
 </html>
