--- a/localdb.html
+++ b/localdb.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/menu.js"></script>
    	<script type="text/javascript" src="js/functions.js"></script>
+	<script type="text/javascript" src="js/adds.js"></script>
 </head>
 <body>
   <script>
@@ -28,11 +29,11 @@
 	    <input id="fileDialog" type="file" nwworkingdir="C:\" accept=".fasta,.fa"/><br><br>
       <label for="Nucl">Proteins</label><br><br>
       <input id="fileDialog2" type="file" nwworkingdir="C:\" accept=".fasta,.fa"/><br><br>
-      <label for="Nucl">Sequence_info</label><br><br>
-      <input id="info" type="file" nwworkingdir="C:\" accept=".txt"/><br><br>
-      <label for="Nucl">Protein-nucleotide correspondence</label><br><br>
-      <input id="ids" type="file" nwworkingdir="C:\" accept=".txt"/><br><br>
-	    <input type="submit"  value="Submit" onclick="upload_localdb('#fileDialog','#fileDialog2','databases');"><br><br><br>
+      <label for="Nucl">Sequence info</label><br><br>
+      <input id="info" type="file" nwworkingdir="C:\" accept=".txt,.gz"/><br><br>
+      <label for="Nucl">Ids protein-nucleotide correspondence</label><br><br>
+      <input id="ids" type="file" nwworkingdir="C:\" accept=".txt,.gz"/><br><br>
+	    <input type="submit"  value="Submit" onclick="upload_localdb('#fileDialog','#fileDialog2','databases','#info','#ids');"><br><br><br>
 	    <div id="subject" name="subject"></div>
 	  <!-- </form> -->
 	</div>
