--- a/menu.html
+++ b/menu.html
@@ -1,13 +1,30 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">Config</a>
-  <ul><a href="reference.html">Host reference</a>
-  <a href="ncbi.html">NCBI update</a>
-  <a href="localdb.html">Local DB update</a></ul>
-<!--   <a href="qc.html">1. Upload</a>
-  <a href="clean.html">2. Trimming</a>
-  <a href="spike.html">3. Spike</a>
-  <a href="analysis.html">4. Analysis</a> -->
+  <a href="index.html">Home</a>
+  <button class="dropdown-btn">Config 
+    <i class="fa fa-caret-down"></i>
+  </button>
+  <div class="dropdown-container">
+    <a href="reference.html"> Host reference</a>
+    <a href="ncbi.html"> NCBI update</a>
+    <a href="localdb.html"> Local DB update</a>
+  </div>
   <a href="vd_analysis.html">Analysis</a>
   <a href="results.html">Contact</a>
 </div>
+<script type="text/javascript">
+  var dropdown = document.getElementsByClassName("dropdown-btn");
+  var i;
+
+  for (i = 0; i < dropdown.length; i++) {
+    dropdown[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var dropdownContent = this.nextElementSibling;
+      if (dropdownContent.style.display === "block") {
+        dropdownContent.style.display = "none";
+      } else {
+        dropdownContent.style.display = "block";
+      }
+    });
+  }
+</script>
