add contact info

--- a/vd_analysis.html
+++ b/vd_analysis.html
@@ -102,6 +102,10 @@
             <textarea id="spiketext" onkeypress="return onlyAlphabets(event,this);"></textarea>
         </div>
         <div>
+			<label>Select a control sequence</label><br>
+            <select  class="form-control" id="control" name="control">
+              <option value=""></option>
+            </select><br>
             <label>Select virus sequence database</label><br>
             <select  class="form-control" id="databases" name="databases">
               <option value=""></option>
