--- a/results.html
+++ b/results.html
@@ -1,12 +1,42 @@
-
-  <title>Run analysis</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>VDW</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/spinner.css">
     <script type="text/javascript" src="js/menu.js"></script>
-    <script type="text/javascript" src="js/integrate.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
-    <script type="text/javascript" src="js/adds.js"></script>
-    <script type="text/javascript" src="js/graph.js"></script>
-    
+    <style type="text/css">
+      body, html {
+        height: 100%;
+      }
+    </style>
+</head>
+
+<body>
+<script>
+    // get the system platform using node.js
+    var os = require('os');
+    //require('nw.gui').Window.get().showDevTools();
+    // document.write('You are running on ', os.platform());
+    $(function(){
+      $("#Menu").load("menu.html"); 
+    });
+</script>
+<div id="Menu"></div>
+
+<!-- Use any element to open the sidenav -->
+<span onclick="openNav()" style="color: white;background-color: black;">&#9776; Menu</span>
+
+  <div id="main">
+    <div class="container" id="container"><br>
+<label>Contact information:</label><br>
+<p>Dr. Jan Kreuze<br>j.kreuze@cgiar.org </p><br>
+<a href="mailto: j.kreuze@cgiar.org">Send Email</a>
+<br>
+</div>
+</div>
+
+</body>
+</html>
