--- a/control.html
+++ b/control.html
@@ -19,7 +19,14 @@
 <!-- Use any element to open the sidenav -->
   <span onclick="openNav()">Menu</span>
   <div id="main">
-
+    <div class="container" id="container">    
+      <form>
+      <label for="upload">Upload host reference (fasta file)</label><br><br>
+      <input id="fileDialog" type="file" accept=".fasta,.fa" nwworkingdir="C:\"  /><br><br>
+      <input type="submit"  value="Submit" onclick="upload_control('#fileDialog','databases')"><br><br><br>
+      <div id="subject" name="subject"></div>
+    </form>
+  </div>
   </div>
 
 </body>
