add control, delete folder

--- a/control.html
+++ b/control.html
@@ -21,7 +21,7 @@
   <div id="main">
     <div class="container" id="container">    
       <form>
-      <label for="upload">Upload host reference (fasta file)</label><br><br>
+      <label for="upload">Upload control sequence (fasta file)</label><br><br>
       <input id="fileDialog" type="file" accept=".fasta,.fa" nwworkingdir="C:\"  /><br><br>
       <input type="submit"  value="Submit" onclick="upload_control('#fileDialog','databases')"><br><br><br>
       <div id="subject" name="subject"></div>
