--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script>
     // get the system platform using node.js
     var os = require('os');
-    //require('nw.gui').Window.get().showDevTools();
+    require('nw.gui').Window.get().showDevTools();
     // document.write('You are running on ', os.platform());
     $(function(){
       $("#Menu").load("menu.html"); 
