--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
     <a href="reference.html"> Host reference</a>
     <a href="ncbi.html"> NCBI update</a>
     <a href="localdb.html"> Local DB update</a>
+	<a href="control.html"> Control</a>
   </div>
   <a href="vd_analysis.html">Analysis</a>
   <a href="results.html">Contact</a>
