--- a/reference.html
+++ b/reference.html
@@ -24,7 +24,7 @@
 	  	<label for="upload">Upload host reference (fasta file)</label><br><br>
 	    <input id="fileDialog" type="file" multiple accept=".fasta,.fa" nwworkingdir="C:\"  /><br><br>
 	    <input type="submit"  value="Submit" onclick="upload_reference('#fileDialog','databases')"><br><br><br>
-	    <div id="subject" name="subject"></div>
+	    <label id="subject" name="subject"></label>
 	  </form>
 	</div>
   </div>
