--- a/menu.html
+++ b/menu.html
@@ -1,17 +1,26 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Home</a>
-  <button class="dropdown-btn">Config 
+  <button class="dropdown-btn">Virus reference database 
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-container">
-    <a href="reference.html"> Host reference</a>
-    <a href="ncbi.html"> NCBI update</a>
-    <a href="localdb.html"> Local DB update</a>
-	<a href="control.html"> Control</a>
+    <a href="ncbi.html"> Download/Update NCBI database</a>
+    <a href="localdb.html"> Load custom database</a>
   </div>
+    <a href="reference.html"> Host reference (optional)</a>
+  <a href="control.html"> Control virus (optional)</a>
   <a href="vd_analysis.html">Analysis</a>
-  <a href="results.html">Contact</a>
+  <a href="results.html">Results</a>
+  <button class="dropdown-btn">About VDW
+    <i class="fa fa-caret-down"></i>
+  </button>
+  <div class="dropdown-container">
+  <a href="about.html">About/citation</a>
+  <a href="results.html">User manual</a>
+  <a href="updates.html">Check for updates</a>
+  <a href="contact.html">Contact us</a>
+  </div>
 </div>
 <script type="text/javascript">
   var dropdown = document.getElementsByClassName("dropdown-btn");
