--- a/vd_analysis.html
+++ b/vd_analysis.html
@@ -88,7 +88,7 @@
   <h4 align="center">Analysis</h4>
   <div id="main">
     <!-- <div class="container" id="container"> -->
-        <!-- <label id="ruta"></label> -->
+        <label id="ruta"></label>
         <div class="w3-panel w3-light-grey w3-card-2 w3-round-large">
           <label><br>Enter run folder name (no spaces; required) <div class="tooltip">(?)<span class="tooltiptext">Provide a name for the folder in which the result of this run will be saved.</span></div></label><br>
           <input type="text" id="pname" name="projectname" placeholder=""><br>
