--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
 
   <div id="main">
     <div class="container" id="container"><br>
-<label>Contact information:</label><br>
-<p>Dr. Jan Kreuze<br>j.kreuze@cgiar.org </p><br>
-<a href="mailto: j.kreuze@cgiar.org">Send Email</a>
+<h4>Contact information:</h4><br>
+<p>Use this contact to report bugs or receive more information</p><br>
+<a href="mailto:VirusDetect.Windows@cgiar.org">VirusDetect.Windows@cgiar.org</a>
 <br>
 </div>
 </div>
