--- a/control.html
+++ b/control.html
@@ -17,7 +17,7 @@
   </script>
   <div id="Menu"></div>
 <!-- Use any element to open the sidenav -->
-  <span onclick="openNav()">Menu</span>
+  <span onclick="openNav()" style="color: chartreuse;background-color: black;"><B>&nbsp;&#9776;&nbsp;Menu&nbsp;&nbsp;</B> </span>
   <div id="main">
     <div class="container" id="container">    
       <form>
