--- a/localdb.html
+++ b/localdb.html
@@ -17,7 +17,7 @@
   </script>
   <div id="Menu"></div>
 
-	<span onclick="openNav()">Menu</span>
+	<span onclick="openNav()" style="color: chartreuse;background-color: black;"><B>&nbsp;&#9776;&nbsp;Menu&nbsp;&nbsp;</B> </span>
 	<h3 align="center">Load custom database</h3>
   <div id="main">
   	<div class="container" id="container">
