--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,6 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="index.html">Home</a>
+  <a href="index.html">Home</a><hr style="border-width: .3px">
   <button class="dropdown-btn">Virus reference database 
     <i class="fa fa-caret-down"></i>
   </button>
@@ -10,8 +10,9 @@
   </div>
     <a href="reference.html"> Host reference (optional)</a>
   <a href="control.html"> Control virus (optional)</a>
-  <a href="vd_analysis.html"> Analysis</a>
-  <a onclick="gui.Shell.showItemInFolder(path.join(process.cwd(),'results'))">Results</a>
+  <hr style="border-width: .5px;color: #262626">
+  <a href="vd_analysis.html"> Analysis</a><hr style="border-width: .5px">
+  <a onclick="gui.Shell.showItemInFolder(path.join(process.cwd(),'results'))">Results</a><hr style="border-width: .5px">
   <button class="dropdown-btn">About VDW
     <i class="fa fa-caret-down"></i>
   </button>
