--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <div id="Menu"></div>
 
 <!-- Use any element to open the sidenav -->
-<span onclick="openNav()" style="color: white;background-color: black;">&#9776; Menu</span>
+<span onclick="openNav()" style="color: chartreuse;background-color: black;"><B>&nbsp;&#9776;&nbsp;Menu&nbsp;&nbsp;</B> </span>
 
 <div id="main">
     <div class="container" id="container">
