--- a/previous.html
+++ b/previous.html
@@ -23,6 +23,12 @@
     $(function(){
       $("#Menu").load("menu.html"); 
     });
+    var path = require("path");
+    var gui = require('nw.gui');
+    var dir = path.join(process.cwd(),'results');
+    // gui.Shell.showItemInFolder(dir);
+    gui.Shell.openItem('VDW_manual.pdf')
+    //window.open("index.html");
 </script>
 <div id="Menu"></div>
 
@@ -31,11 +37,7 @@
 
   <div id="main">
     <div class="container" id="container"><br>
-<h4>Contact information:</h4><br>
-<p>Use this contact to report bugs or receive more information</p><br>
-<a href="mailto:VirusDetect.Windows@cgiar.org">VirusDetect.Windows@cgiar.org</a>
-<br>
-</div>
+	</div>
 </div>
 
 </body>
