--- a/vd_analysis.html
+++ b/vd_analysis.html
@@ -77,7 +77,7 @@
       content.style.maxHeight = content.scrollHeight + "px";
     } 
   };
-	document.getElementById("outputtext").style.visibility="hidden";
+  document.getElementById('outputtext').style.display = "none";
   </script>
 
   <div id="Menu"></div>
@@ -141,9 +141,9 @@
         </div>
 <!-- </div> -->
 
-        <input type="submit" id="run" value="Run" onclick="run_VD('#fileDialog')">
+    <input type="submit" id="run" value="Run" onclick="run_VD('#fileDialog')"><br>
 		<label id="running"></label>
-		<textarea id="outputtext" style="height: 150px;overflow-y:scroll" readonly></textarea>
+		<textarea id="outputtext" style="height: 150px;overflow-y:scroll;display: none;" readonly></textarea>
 		
     </div>
 
