--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
   <div class="dropdown-container">
   <a href="about.html">About/citation</a>
   <a onclick="gui.Shell.openItem('VDW_manual.pdf')">User manual</a>
-  <a href="http://potpathodiv.org/vd_download.html" target="_blank">Check for updates</a>
+  <a onclick="nw.Shell.openExternal('http://potpathodiv.org/vd_download.html');" href="" target="_blank">Check for updates</a>
   <a href="contact.html">Contact us</a>
   </div>
 </div>
