--- a/vd_analysis.html
+++ b/vd_analysis.html
@@ -85,7 +85,7 @@
 
 <!-- Use any element to open the sidenav -->
   <span onclick="openNav()" style="color: chartreuse;background-color: black;"><B>&nbsp;&#9776;&nbsp;Menu&nbsp;&nbsp;</B> </span>
-  <h4 align="center">Analysis</h4>
+  <h3 align="center">Analysis</h4>
   <div id="main">
     <!-- <div class="container" id="container"> -->
         <label id="ruta"></label>
@@ -110,7 +110,7 @@
           <button class="collapsible" onclick="collap(this);">Library quality control (optional)</button>
           <div class="content-collap">
               <label><br><br>Enter spike sequences <div class="tooltip">(?)<span class="tooltiptext1">Synthetic RNA spike-in sequences can be added to samples before (recommended to control the complete library prep process), or after RNA extraction. Recovery of spike-in sequences among the reads of your sample library will provide an indication of the efficiency of library preparation and enable absolute quantification of (small) RNA amounts in the sample. Ex. ATGGAGCCAGTTC</span></div></label><br>
-              <textarea id="spiketext" onkeypress="return onlyAlphabets(event,this);"></textarea><br><br>
+              <textarea rows=6 id="spiketext" onkeypress="return onlyAlphabets(event,this);"></textarea><br>
               <label>Select the control sequence <div class="tooltip">(?)<span class="tooltiptext">Cross sample contamination can be a problem when running several indexed samples in a same lane of a flowcell. To control for cross-sample contamination and adjust the default threshold of average read depth and coverage for virus detection by VDW, one can include a control sample containing a known virus at high concentration and unrelated to the sample under investigation. If included VWD will provide a separate output on genome coverage and sequencing depth of the control over all samples selected for the run.</span></div></label><br>
               <select  class="form-control" id="control" name="control">
                 <option value=""></option>
