adding %mapped improve menu

--- a/menu.html
+++ b/menu.html
@@ -18,8 +18,8 @@
   </button>
   <div class="dropdown-container">
   <a href="about.html">About/citation</a>
-  <a onclick="gui.Shell.openItem('VDW_manual.pdf')">User manual</a>
-  <a onclick="nw.Shell.openExternal('http://potpathodiv.org/vd_download.html');" href="" target="_blank">Check for updates</a>
+  <a onclick="nw.Shell.openExternal('https://research.cip.cgiar.org/virusdetect/VDW_Manual.pdf');">User manual</a>
+  <a onclick="nw.Shell.openExternal('https://research.cip.cgiar.org/virusdetect');" href="">Check for updates</a>
   <a href="contact.html">Contact us</a>
   </div>
 </div>
