--- a/vd_analysis.html
+++ b/vd_analysis.html
@@ -106,7 +106,7 @@
               <input type="text" id="adaptor" name="adaptor" placeholder="" onkeypress="return onlyAlphabets(event,this);">
               <br>
               <label>Minimum length of sequence after trimming <div class="tooltip">(?)<span class="tooltiptext">A minimum length for sequences after trimming can be provided, this is useful when you want to consider only true siRNA (21-24nts) or avoid extremely short sequences in your analysis, reducing read numbers and analysis time.</span></div></label><br>
-              <input type="text" id="length" name="length" placeholder="" onkeypress="return onlyNos(event,this);">
+              <input type="text" id="minlength" name="minlength" placeholder="" onkeypress="return onlyNos(event,this);">
 			  <br>
 			  <label>Maximum length of sequence after trimming <div class="tooltip">(?)<span class="tooltiptext">A maximum length for sequences after trimming can be provided, this is useful when you want to consider only true siRNA (21-24nts) or avoid extremely long sequences in your analysis, reducing read numbers and analysis time.</span></div></label><br>
               <input type="text" id="maxlength" name="maxlength" placeholder="" onkeypress="return onlyNos(event,this);">
