add sd constant

--- a/vd_analysis.html
+++ b/vd_analysis.html
@@ -101,7 +101,7 @@
           </div>
           <button class="collapsible" onclick="collap(this);">Sequence cleaning & trimming (optional in case of raw reads) <div class="tooltip">(?)<span class="tooltiptext">If raw reads are provided VDW can clean and trim sequence libraries, you will have to provide the sequencing adaptor and optionally minimum and maximimum sequence length after trimming.</span></div></button>
           <div class="content-collap" >
-			<input type="checkbox" id="dedup" name="dedup" value="TRUE"><label for="dedup">Remove duplicated reads</label><br>
+			<input type="checkbox" id="dedup" name="dedup" value="TRUE"><label for="dedup">Remove duplicated reads <div class="tooltip">(?)<span class="tooltiptext1">Reads that are identical are removed with this option, keeping only unique reads. This can reduce the computing time if many duplicated reads are present in the data.</span></div></label><br>
             <label><br>Sequences of the adaptor <div class="tooltip">(?)<span class="tooltiptext1">Provide the sequence for the library adaptor sequence, commonly used adaptor sequences are provided in the VDW user manual. Ex. CAGATCGGAAGAGCACA</span></div></label><br>
               <input type="text" id="adaptor" name="adaptor" placeholder="" onkeypress="return onlyAlphabets(event,this);">
               <br>
@@ -121,6 +121,8 @@
               </select>
               <label>Add control sample <div class="tooltip">(?)<span class="tooltiptext">Here you can define which <br> of your samples is the control.</span></div></label><br>
               <input type="text" id="ccontrol" name="ccontrol" placeholder="">
+			  <label>Control cutoff: Average + Number*SD (default: Number=2) <div class="tooltip">(?)<span class="tooltiptext">The control cutoff value can be used to determine an expected contamination rate of highly abundant reads of a virus identified from one sample to any other sample of a pooled library and is based on the detected contamination from the sample with your control virus (when included) throughout the pooled library. Use it by multiplying the control cutoff value with the Depth (Norm)' value of any virus with high 'Depth (Norm)' values identified in any sample, which will provide you a 'Depth (Norm)' you could expect of that same virus in other samples based purely on contamination and could thus represent false positives.</span></div></label>
+			  <input type="text" id="number_sd" name="number_sd" placeholder="">
           </div>
           <br>
         </div>
