--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
 <!-- <div id="main"> -->
-<div style="height:100%; width:100%; padding:0px; background:url(./index.jpg) no-repeat white"></div>
+<div style="height:100%; width:100%; background-size:cover; padding:0px; background:url(./home.png) no-repeat white center center fixed"></div>
 
 <!-- <img src="index.jpg" id="bg" alt=""> -->
 <!-- </div> -->
